# aos-dispatcher

./: . dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  dispatcher.toml  docker-compose.yml
abi/: vrf_abi.json
migrations/2024-07-30-042156_create_qa/: down.sql  up.sql
singer/: Cargo.toml
singer/src/: lib.rs  msg_signer.rs
src/: admin.rs  config.rs  consts.rs  error.rs  lib.rs  main.rs  message.rs  operator.rs  schema.rs  service.rs  ws.rs
src/admin/: handler.rs  model.rs  service.rs  util.rs
src/db/pg/: model.rs  util.rs
src/job/: handler.rs  model.rs
src/models/: mod.rs
src/models/job_request/: generated.rs
src/models/job_result/: generated.rs
src/models/operator/: generated.rs
src/models/project/: generated.rs
src/models/user/: generated.rs
src/operator/: handler.rs  model.rs  util.rs
src/opml/: handler.rs  mod.rs  model.rs
src/server/: server.rs
src/service/: nostr.rs  task.rs
src/service/nostr/: model.rs  util.rs
src/tee/: handler.rs  model.rs
src/vrf/: mod.rs  vrf.rs
src/ws/: msg.rs  util.rs
