[workspace]
resolver = "2"

members = [
  # "singer"
]

[workspace.dependencies]
axum = { version = "0.7.5", features = ["macros", "ws"] }
tokio = { version = "1.38.0", features = ["full"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = {version = "1.0.120", features = ["preserve_order"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5.2", features = ["add-extension", "auth", "compression-full", "trace", "cors"] }
reqwest = { version = "0.12.5", features = ["default", "json"] }
uuid = { version = "1", features = ["v4"] }
diesel = { version = "2.2.1", features = ["postgres", "extras"] }
dotenvy = "0.15"
chrono = {version = "0.4", features = ["serde"]}
alloy = { version = "0.3", features = ["full", "signer-mnemonic"] }
nostr-sdk = "0.34.0"
nostr = "0.34.0"
toml = "0.8.19"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1.82"
diesel_migrations = "2.2.0"
secp256k1 = "0.29.1"
sha3 = "0.10.8"
hex = "0.4.3"
emojis = "0.6.3"







[package]
name = "aos-dispatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
tokio.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
uuid.workspace = true
diesel.workspace = true
dotenvy.workspace = true
chrono.workspace = true
alloy.workspace = true
nostr-sdk.workspace = true
nostr.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
diesel_migrations.workspace = true
hex.workspace = true
emojis.workspace = true
secp256k1.workspace = true